# ayon-marvelous-designer

./: README.md  create_package.py  mkdocs.yml  mkdocs_hooks.py  package.py  pyproject.toml  ruff.toml  versions.json
.github/workflows/: deploy_mkdocs.yml
1.0.1/: 404.html  objects.inv
1.0.1/autoapi/: summary.html
1.0.1/autoapi/server/: settings.html
1.0.1/search/: search_index.js  search_index.json
1.0.2/: 404.html  index.html  license.html  objects.inv
1.0.2/autoapi/: summary.html
1.0.2/autoapi/server/: index.html  settings.html
1.0.2/search/: search_index.js  search_index.json
1.1.0/: 404.html  index.html  license.html
1.1.0/autoapi/: summary.html
1.1.0/autoapi/server/: index.html  settings.html
1.1.0/search/: search_index.js  search_index.json
1.1.1/: 404.html  index.html  license.html
1.1.1/autoapi/: summary.html
1.1.1/autoapi/server/: index.html  settings.html
1.1.1/search/: search_index.js  search_index.json
1.1.2/: objects.inv
1.1.2/autoapi/: summary.html
1.1.2/autoapi/server/: settings.html
1.1.2/search/: search_index.js  search_index.json
client/ayon_marvelousdesigner/: __init__.py  addon.py  version.py
client/ayon_marvelousdesigner/api/: __init__.py  ayon_dialog.py  pipeline.py  plugin.py
client/ayon_marvelousdesigner/default_zprj/: Default_MD.zprj
client/ayon_marvelousdesigner/deploy/: ayon_plugins.py
client/ayon_marvelousdesigner/hooks/: pre_install_ayon_plugins.py  (+2 more)
server/: __init__.py  settings.py
test-build/: index.html  license.html
test-build/search/: search_index.js  search_index.json
(+168 files in other folders)
