# WARNING: This file is used only for development done on this addon.
# Be aware that dependencies used here might not match the ones used by
# the specific addon bundle set up on the AYON server. This file should
# be used only for local development and CI/CD purposes. To define addon
# dependencies, use pyproject.toml file in the `client` directory.

[project]
name = "ayon-marvelous-designer"
version = "0.1.0"
description = "AYON Core Marvelous Designer Integration Addon"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9.6,<3.10.0"
dependencies = [
    "pre-commit",
    "ruff ~= 0.14",
    "mypy",
    "mkdocs-material ~= 9.6.7",
    "mkdocs-autoapi ~= 0.4.0",
    "mkdocstrings-python ~= 1.16.2",
    "mkdocs-minify-plugin ~= 0.8.0",
    "markdown-checklist ~= 0.4.4",
    "mdx-gh-links ~= 0.4",
    "pymdown-extensions ~= 10.19.1",
    "mike ~= 2.1.3",
    "mkdocstrings-shell ~= 1.0.2"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "codespell",
]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
strict_optional = true
